--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 
 	"require": {
 		"php": ">=8.0",
-		"phpgt/cli": "^1.3.1"
+		"phpgt/cli": "dev-master"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^9.5.5",
