--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 
 	"require": {
 		"php": ">=8.0",
-		"phpgt/cli": "^1.3"
+		"phpgt/cli": "^1.3",
+		"phpgt/server": "^1.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^9.5",
