--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 	"require": {
 		"php": ">=8.0",
 		"phpgt/cli": "^1.3",
-		"phpgt/server": "^1.1"
+		"phpgt/server": "^1.1",
+		"phpgt/database": "^1.3"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^9.5",
