--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
 		"php": ">=8.0",
 		"phpgt/cli": "^1.3",
 		"phpgt/server": "^1.1",
-		"phpgt/database": "^1.3"
+		"phpgt/cron": "^1.0",
+		"phpgt/database": "^1.3",
+		"phpgt/build": "^1.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^9.5",
