--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
 		"phpgt/build": "^1.0"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "^9.5",
-		"phpstan/phpstan": "^0.12"
+		"phpstan/phpstan": "v1.8.0",
+		"phpunit/phpunit": "v9.5.21"
 	},
 
 	"autoload": {
