--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
 		"phpgt/build": "^1.0"
 	},
 	"require-dev": {
-		"phpstan/phpstan": "v1.8.0",
-		"phpunit/phpunit": "v9.5.21"
+		"phpstan/phpstan": "^v1.10",
+		"phpmd/phpmd": "^2.13",
+		"squizlabs/php_codesniffer": "^3.7"
 	},
 
 	"autoload": {
