--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [ 8.1, 8.2, 8.3 ]
+        php: [ 8.2, 8.3 ]
 
     steps:
       - uses: actions/checkout@v4
@@ -38,7 +38,7 @@ jobs:
     needs: [ composer ]
     strategy:
       matrix:
-        php: [ 8.1, 8.2, 8.3 ]
+        php: [ 8.2, 8.3 ]
 
     steps:
       - uses: actions/download-artifact@v4
@@ -61,7 +61,7 @@ jobs:
     needs: [ composer ]
     strategy:
       matrix:
-        php: [ 8.1, 8.2, 8.3 ]
+        php: [ 8.2, 8.3 ]
 
     steps:
       - uses: actions/download-artifact@v4
@@ -85,7 +85,7 @@ jobs:
     needs: [ composer ]
     strategy:
       matrix:
-        php: [ 8.1, 8.2, 8.3 ]
+        php: [ 8.2, 8.3 ]
 
     steps:
       - uses: actions/download-artifact@v4
