--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,17 @@
 	],
 
 	"require": {
-		"php": ">=8.0",
+		"php": ">=8.2",
 		"phpgt/cli": "^1.3",
-		"phpgt/server": "^1.1",
+		"phpgt/server": "dev-master as v1.1.5",
 		"phpgt/cron": "^1.0",
 		"phpgt/database": "^1.6",
 		"phpgt/build": "^1.0"
 	},
 	"require-dev": {
-		"phpstan/phpstan": "v1.8.0",
-		"phpunit/phpunit": "v9.5.21"
+		"phpstan/phpstan": "^v1.10",
+		"phpmd/phpmd": "^2.13",
+		"squizlabs/php_codesniffer": "^3.7"
 	},
 
 	"autoload": {
